--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "loaders.css": "^0.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4",
