--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4",
+    "sweetalert2": "^11.16.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
